# diffcalc-core

./: .bumpversion  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.rst  azure-pipelines.yml  ci.yml  flake8-validation.py  mypy.ini  pytest.ini  report.html  requirements.txt  requirements_dev.txt  setup.cfg  tox.ini
 .azure-pipelines/: azure-pipelines.yml  ci.yml
.azure-pipelines/: ci.yml
.devcontainer/: devcontainer.json
.github/: ISSUE_TEMPLATE.md
.github/workflows/: code.yml  codeql.yml
docs/: Makefile  api.rst  conf.py  diffcalc.hkl.rst  diffcalc.rst  diffcalc.ub.rst  index.rst  installation.rst  make.bat  modules.rst  requirements.txt  usage.rst
examples/: six_circle.py  surface.py
src/diffcalc/: __init__.py  common_types.py  log.py  util.py
src/diffcalc/hkl/: __init__.py  calc.py  calc_detector.py  calc_func.py  calc_reference.py  calc_sample.py  constraints.py  geometry.py
src/diffcalc/ub/: __init__.py  calc.py  crystal.py  fitting.py  reference.py  systems.py
tests/: __init__.py  test_tools.py  tools.py
tests/diffcalc/: __init__.py  scenarios.py  test_utils.py
tests/diffcalc/hkl/: test_calc.py  test_calc_cubic_horizontal.py  test_calc_cubic_vertical.py  test_calc_det_ref_samp.py  test_calc_diamond_examples.py  test_calc_methods.py  test_calc_one_detector.py  test_calc_one_reference.py  test_calc_surface.py  test_calc_tetragonal.py  test_calc_three_samp.py  test_constraints.py  test_geometry.py
tests/diffcalc/ub/: test_calc.py  test_calculation.py  test_calculation_you.py  test_crystal.py  test_orientations.py  test_reference.py  test_reference2.py  test_reference_vector.py  test_reflections.py  test_ub.py
tests/diffcalc/ub/strings/calc/: full_info.txt  n_hkl.txt  n_phi.txt  none_crystal.txt  set_unitary_UB.txt  unitary_UB.txt
tests/diffcalc/ub/strings/crystal/: crystal_cut.txt
tests/diffcalc/ub/strings/reference/: orientation.txt  reflection.txt
