[metadata]
name = diffcalc-core
version = 0.4.0
description = Diffraction Condition Calculator
long_description = file: README.rst
author = Diamond Light Source
author_email = scientificsoftware@diamond.ac.uk
license = Apache License, Version 2.0
license_file = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
keywords =
    diffcalc
    diffractometer
    x-ray
    neutron
project-urls =
    Documentation = https://diffcalc-core.readthedocs.io/
    GitHub = https://github.com/DiamondLightSource/diffcalc-core
    Bug-Tracker = https://github.com/DiamondLightSource/diffcalc-core/issues

[options]
include_package_data = True
install_requires =
    numpy
    scipy
    typing_extensions
    pint
    typing
    typing_extensions
packages = find:
package_dir =
    =src
python_requires = >=3.7
zip_safe = False

[options.packages.find]
where = src

[bdist_wheel]
universal = 1

[aliases]
# Define setup.py command aliases here
test = pytest
